added central search with solr, nexus 2 & 3, support nexus & proxy auth